Correct UI on small screens

--- a/src/less/app.less
+++ b/src/less/app.less
@@ -45,6 +45,7 @@ header {
     width: 1em !important;
     position: absolute;
     z-index: 1000;
+    padding : 0 0.5rem !important;
   }
 }
 
