--- a/src/less/imports/small-screen.less
+++ b/src/less/imports/small-screen.less
@@ -19,7 +19,7 @@
   }
 
   ul.collection.messages {
-    width: calc(99% - 1em - 1.5rem);
+    width: ~"calc(99% - 1em - 1.5rem)";
     right: 0;
     margin-right: 1%;
   }
